# num-packer

./: Cargo.toml  README.md
src/: impls.rs  lib.rs  packer.rs
tests/: test_bool_packer.rs  test_f32_packer.rs  test_i16_packer.rs  test_i32_packer.rs  test_i8_packer.rs  test_u16_packer.rs  test_u32_packer.rs  test_u8_packer.rs
