[package]
name = "num-packer"
version = "0.1.0"
edition = "2024"
authors = ["Julian Wang <traceflight@outlook.com>"]
description = ""
readme = "README.md"
documentation = "https://docs.rs/num-packer/"
repository = "https://github.com/traceflight/num-packer"
keywords = ["number", "pack", "packer", "num"]
categories = ["data-structures", "encoding"]
license = "MIT OR Apache-2.0"

[dependencies]
