[package]
name = "num-packer"
version = "0.1.2"
edition = "2024"
authors = ["Julian Wang <traceflight@outlook.com>"]
description = "Provides traits and implementations for packing and unpacking two numbers into a single value."
readme = "README.md"
documentation = "https://docs.rs/num-packer/"
repository = "https://github.com/traceflight/num-packer"
keywords = ["number", "pack", "packer", "num"]
categories = ["data-structures", "encoding", "no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
